# CSswitch

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  README.md
.github/workflows/: build.yml
desktop/: README.md
desktop/src/: index.html  main.js  styles.css
desktop/src-tauri/: Cargo.toml  Cross.toml  build.rs  tauri.conf.json
desktop/src-tauri/src/: config.rs  fs_ext.rs  lib.rs  lib_tauri.rs  main.rs  oauth_forge.rs  proc.rs  remote_commands.rs
desktop/src-tauri/src/cli/: commands.rs  logger.rs  mod.rs  proc_manager.rs  serve.rs  types.rs
desktop/src-tauri/src/remote/: askpass.rs  auth.rs  credentials.rs  mod.rs  prompt.rs  ssh.rs  store.rs  transport.rs  types.rs  wsl.rs
docs/: DEVELOPMENT.md
docs/release-notes/: v0.3.3.md  v0.3.6.md
test/: test_desktop_ui_contract.mjs
